--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Hayeon Lee"
-  avatar           : "hylee.png"
+  avatar           : "hylee.jpg"
   bio              : "Ph.D student at School of Computing, Korea Advanced Institute of Science and Technology (KAIST)"
   location         : "Seoul, South Korea"
   employer         :
