--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Hayeon Lee"
 title_separator          : "-"
 name                     : &name "Hayeon Lee"
 description              : &description "Ph.D. Student at KAIST"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : 
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "github.com/HayeonLee"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
