--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Seoul, South Korea"
   employer         :
   pubmed           : 
-  googlescholar    : #"https://scholar.google.com/citations?user=5DaLgBUAAAAJ&hl=ko"
+  googlescholar    : "https://scholar.google.com/citations?user=kpDJ2mgAAAAJ&hl=ko"
   email            : "hyeonjeongha@kaist.ac.kr"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : #"hayeonlee_ai"
+  twitter          : "hyeonjeong_ai"
   vine             :
   weibo            :
   xing             :
