--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : #"hayeon-lee-이하연-00b170190"
+  linkedin         : "hyeonjeong-ha-bb93b0285"
   orcid            :
   pinterest        :
   soundcloud       :
